--- a/public/422.html
+++ b/public/422.html
@@ -58,10 +58,9 @@
   <!-- This file lives in public/422.html -->
   <div class="dialog">
     <div>
-      <h1>The change you wanted was rejected.</h1>
-      <p>Maybe you tried to change something you didn't have access to.</p>
+      <h1>TAKOWidget 2R</h1>
+      <p>アクセスが拒否されました。</p>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
   </div>
 </body>
 </html>
