--- a/public/500.html
+++ b/public/500.html
@@ -58,9 +58,10 @@
   <!-- This file lives in public/500.html -->
   <div class="dialog">
     <div>
-      <h1>We're sorry, but something went wrong.</h1>
+      <h1>TAKOWidget 2R</h1>
+      <p>エラーが発生しました。</p>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <p></p>
   </div>
 </body>
 </html>
